--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                             <ul class="sub-menu">
                                                 <li id="menu-item-264"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-264">
-                                                    <a href="https://weibo.com/hiliutongxu" target="_blank">所长微博</a>
+                                                    <a href="https://weibo.com/China" target="_blank">所长微博</a>
                                                 </li>
                                                 <li id="menu-item-285"
                                                     class="menu-item menu-item-type-custom menu-item-object-custom menu-item-285">
@@ -258,7 +258,7 @@
                         <ul>
                             <li id="menu-item-237"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-237 sidebar-item">
-                                <a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=hiliutongxu@qq.com" target="_blank">
+                                <a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=China@qq.com" target="_blank">
                                     <i class="io io-tijiao icon-fw icon-lg mr-2"></i>
                                     <span>网站提交</span></a>
                             </li>
@@ -321,7 +321,7 @@
                                         <ul class="sub-menu">
                                             <li id="menu-item-264"
                                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-264">
-                                                <a href="https://weibo.com/hiliutongxu">所长微博</a>
+                                                <a href="https://weibo.com/China">所长微博</a>
                                             </li>
                                             <li id="menu-item-285"
                                                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-285">
@@ -1665,8 +1665,8 @@
                 </div>
                 <div class="footer-inner">
                     <div class="footer-text">
-                        Copyright © 2021 为你导航 &nbsp;&nbsp;by <a href="https://github.com/liutongxu/"
-                            target="_blank"><strong>LiuTongxu</strong></a>&nbsp;&nbsp;
+                        Copyright © 2021 为你导航 &nbsp;&nbsp;by <a href="https://github.com/jiang2022/"
+                            target="_blank"><strong>Jiang2022</strong></a>&nbsp;&nbsp;
                     </div>
                 </div>
             </footer>
