--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 }
             }
         </style>
-        <div class="loader">一个有范的导航</div>
+        <div class="loader">倩宝专属导航</div>
     </div>
     <div class="page-container">
 
