--- a/index.html
+++ b/index.html
@@ -782,21 +782,21 @@
                     <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a  ">
                 
                         <div class="url-body default">
-                            <a href="http://www.czjx8.com/" target="_blank" data-id="229" data-url="http://www.czjx8.com/"
+                            <a href="https://weread.qq.com/" target="_blank" data-id="229" data-url="https://weread.qq.com/"
                                 class="card no-c  mb-4 site-229" data-toggle="tooltip" data-placement="bottom" data-html="true"
-                                title="全网VIP视频解析，满足所有平台VIP视频需求">
+                                title="微信读书提供海量正版书籍、小说、漫画、公众号、听书,多设备同步实现跨屏阅读。">
                                 <div class="card-body">
                                     <div class="url-content d-flex align-items-center">
                                         <div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
-                                            <img class="lazy" src="ico/vip.png" data-src="ico/vip.png"
-                                                onerror="javascript:this.src='ico/vip.png'" alt="VIP视频解析">
+                                            <img class="lazy" src="ico/vip.png" data-src="ico/weixinrd.png"
+                                                onerror="javascript:this.src='ico/weixinrd.png'" alt="微信读书">
                                         </div>
                                         <div class="url-info flex-fill">
                                             <div class="text-sm overflowClip_1">
-                                                <strong>VIP视频解析</strong>
+                                                <strong>微信读书</strong>
                                             </div>
                                             <p class="overflowClip_1 m-0 text-muted text-xs">
-                                                全网VIP视频解析，满足所有平台VIP视频需求</p>
+                                                微信读书提供海量正版书籍、小说、漫画、公众号、听书,多设备同步实现跨屏阅读。</p>
                                         </div>
                                     </div>
                                 </div>
