--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="http://www.czjx8.com/" class="togo text-center text-muted is-views" data-id="424"
+                            <a href="https://weread.qq.com/" class="togo text-center text-muted is-views" data-id="424"
                                 data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
                                     class="iconfont icon-goto"></i></a>
                         </div>
