--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                             value="https://cn.bing.com/search?q=" data-placeholder="微软Bing搜索"><label
                                             for="type-bing"><span class="text-muted">必应</span></label></li>                                            	
                                     <li><input hidden="" type="radio" name="type" id="type-google"
-                                            value="https://www.google.com/search?q=" data-placeholder="谷歌两下"><label
+                                            value="https://www.sanzhima.com/search?q=" data-placeholder="https://www.zaera.cn/2895.html 谷歌镜像站"><label
                                             for="type-google"><span class="text-muted">谷歌</span></label></li>
                                     <li><input hidden="" type="radio" name="type" id="type-zhannei"
                                             value="https://www.iplaysoft.com/?s="
@@ -445,7 +445,7 @@
                                             value="https://www.baidu.com/s?wd=" data-placeholder="百度一下"><label
                                             for="type-baidu1"><span class="text-muted">百度</span></label></li>
                                     <li><input hidden="" type="radio" name="type" id="type-google1"
-                                            value="https://www.google.com/search?q=" data-placeholder="谷歌两下"><label
+                                            value="https://www.sanzhima.com/search?q=" data-placeholder="https://www.zaera.cn/2895.html 谷歌镜像站"><label
                                             for="type-google1"><span class="text-muted">谷歌</span></label></li>
                                     <li><input hidden="" type="radio" name="type" id="type-360"
                                             value="https://www.so.com/s?q=" data-placeholder="360好搜"><label
@@ -887,24 +887,24 @@
                     <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
                 
                         <div class="url-body default">
-                            <a href="https://www.iconfont.cn/" target="_blank" data-id="13" data-url="https://www.iconfont.cn/"
-                                class="card no-c  mb-4 site-13" data-toggle="tooltip" data-placement="bottom" title="矢量图标下载、在线存储、格式转换">
+                            <a href="http://tools.bugscaner.com/google/" target="_blank" data-id="13" data-url="http://tools.bugscaner.com/google/"
+                                class="card no-c  mb-4 site-13" data-toggle="tooltip" data-placement="bottom" title="google镜像">
                                 <div class="card-body">
                                     <div class="url-content d-flex align-items-center">
                                         <div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
-                                            <img class="lazy" src="ico/ailishiliang.png" data-src="ico/ailishiliang.png"
-                                                onerror="javascript:this.src='ico/ailishiliang.png'" alt="阿里图标库">
+                                            <img class="lazy" src="ico/google.png" data-src="ico/google.png"
+                                                onerror="javascript:this.src='ico/google.png'" alt="google镜像">
                                         </div>
                                         <div class="url-info flex-fill">
                                             <div class="text-sm overflowClip_1">
-                                                <strong>阿里图标库</strong>
+                                                <strong>google镜像</strong>
                                             </div>
-                                            <p class="overflowClip_1 m-0 text-muted text-xs">矢量图标下载、在线存储、格式转换</p>
+                                            <p class="overflowClip_1 m-0 text-muted text-xs">google镜像</p>
                                         </div>
                                     </div>
                                 </div>
                             </a>
-                            <a href="https://www.iconfont.cn/" class="togo text-center text-muted is-views" data-id="13"
+                            <a href="http://tools.bugscaner.com/google/" class="togo text-center text-muted is-views" data-id="13"
                                 data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
                                     class="iconfont icon-goto"></i></a>
                         </div>
@@ -1645,7 +1645,7 @@
                                             value="https://cn.bing.com/search?q=" data-placeholder="微软Bing搜索"><label
                                             for="m_type-bing"><span class="text-muted">Bing</span></label></li>
                                     <li><input hidden="" type="radio" name="type2" id="m_type-google"
-                                            value="https://www.google.com/search?q=" data-placeholder="谷歌两下"><label
+                                            value="https://www.sanzhima.com/search?q=" data-placeholder="https://www.zaera.cn/2895.html 谷歌镜像站"><label
                                             for="m_type-google"><span class="text-muted">Google</span></label></li>
                                     <li><input hidden="" type="radio" name="type2" id="m_type-zhannei"
                                             value="https://www.iplaysoft.com/?s="
@@ -1663,7 +1663,7 @@
                                             value="https://www.baidu.com/s?wd=" data-placeholder="百度一下"><label
                                             for="m_type-baidu1"><span class="text-muted">百度</span></label></li>
                                     <li><input hidden="" type="radio" name="type2" id="m_type-google1"
-                                            value="https://www.google.com/search?q=" data-placeholder="谷歌两下"><label
+                                            value="https://www.sanzhima.com/search?q=" data-placeholder="https://www.zaera.cn/2895.html 谷歌镜像站"><label
                                             for="m_type-google1"><span class="text-muted">Google</span></label></li>
                                     <li><input hidden="" type="radio" name="type2" id="m_type-360"
                                             value="https://www.so.com/s?q=" data-placeholder="360好搜"><label
